# coleta_dados_receita_federal

./: .gitignore  README.md  constants.py  main.py  pyproject.toml  requirements.txt
extract/: download.py  scrapping.py
extract/helpers/: __init__.py  decorators.py
