[tool.poetry]
name = "coleta_dados_receita_federal"
version = "0.1.0"
description = "Coleta de dados da Receita Federal sobre empresas e sócios."
authors = ["Felipe Gomes Duarte <xfelipegd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pylama = "^8.3.8"
prospector = "^1.7.7"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
